--- a/App.config
+++ b/App.config
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=SERVER3\SQLEXPRESS;Initial Catalog=Приемная комиссия;Integrated Security=True" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+  <add name="DefaultConnection" connectionString="Data Source=SERVER3\SQLEXPRESS;Initial Catalog=Приемная комиссия;Integrated Security=True" providerName="System.Data.SqlClient"/>
+ </connectionStrings>
 </configuration>
